--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.19.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -44,9 +45,12 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.0",
     "input-otp": "^1.2.4",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
     "next-themes": "^0.3.0",
+    "oslo": "^1.2.1",
+    "prisma": "^5.19.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
