--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cmdk": "1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
+    "framer-motion": "^11.5.4",
     "input-otp": "^1.2.4",
     "lucia": "^3.2.0",
     "lucide-react": "^0.437.0",
